--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <body>
 
   <div class="cover">
-    <img id="cover-image" src="https://www.flickr.com/photos/195681414@N04/54488171468/in/dateposted-public/" alt="Capa do Álbum" />
+    <img id="cover-image" src="https://live.staticflickr.com/65535/54488171468_d37b7e80c9_n.jpg" alt="Capa do Álbum" />
   </div>
 
   <div class="player">
