--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
 <body>
 
   <div class="cover">
-    <img id="cover-image" src="https://live.staticflickr.com/65535/54488171468_d37b7e80c9_n.jpg" alt="Capa do Álbum" />
+    <img
+      id="cover-image"
+      src="https://live.staticflickr.com/65535/54488171468_d37b7e80c9_n.jpg"
+      alt="Capa do Álbum"
+    />
   </div>
 
   <div class="player">
@@ -172,22 +176,50 @@
       <span id="total-time">00:00</span>
     </div>
 
-    <audio id="audio-player">Seu navegador não suporta o elemento de áudio.</audio>
+    <audio id="audio-player">
+      Seu navegador não suporta o elemento de áudio.
+    </audio>
 
     <div class="playlist" id="playlist">
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/1.MP3" data-title="Humildade: A glória da criatura">1 - Humildade: A glória da criatura</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/2.MP3" data-title="Humildade: O segredo da redenção">2 - Humildade: O segredo da redenção</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/3.MP3" data-title="A Humildade de Jesus">3 - A Humildade de Jesus</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/4.MP3" data-title="Humildade no ensinamento de Jesus">4 - Humildade no ensinamento de Jesus</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/5.MP3" data-title="Humildade nos discípulos de Jesus">5 - Humildade nos discípulos de Jesus</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/6.MP3" data-title="Humildade na vida cotidiana">6 - Humildade na vida cotidiana</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/7.MP3" data-title="Humildade e santitade">7 - Humildade e santitade</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/8.MP3" data-title="Humildade e pecado">8 - Humildade e pecado</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/9.MP3" data-title="Humildade e fé">9 - Humildade e fé</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/10.MP3" data-title="Humildade e a morte de si próprio">10 - Humildade e a morte de si próprio</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/11.MP3" data-title="Humildade e felicidade">11 - Humildade e felicidade</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/12.MP3" data-title="Humildade e exaltação">12 - Humildade e exaltação</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/13.MP3" data-title="Uma oração por humildade">13 - Uma oração por humildade</div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/1.MP3" data-title="Humildade: A glória da criatura">
+        1 - Humildade: A glória da criatura
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/2.MP3" data-title="Humildade: O segredo da redenção">
+        2 - Humildade: O segredo da redenção
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/3.MP3" data-title="A Humildade de Jesus">
+        3 - A Humildade de Jesus
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/4.MP3" data-title="Humildade no ensinamento de Jesus">
+        4 - Humildade no ensinamento de Jesus
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/5.MP3" data-title="Humildade nos discípulos de Jesus">
+        5 - Humildade nos discípulos de Jesus
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/6.MP3" data-title="Humildade na vida cotidiana">
+        6 - Humildade na vida cotidiana
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/7.MP3" data-title="Humildade e santidade">
+        7 - Humildade e santidade
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/8.MP3" data-title="Humildade e pecado">
+        8 - Humildade e pecado
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/9.MP3" data-title="Humildade e fé">
+        9 - Humildade e fé
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/10.MP3" data-title="Humildade e a morte de si próprio">
+        10 - Humildade e a morte de si próprio
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/11.MP3" data-title="Humildade e felicidade">
+        11 - Humildade e felicidade
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/12.MP3" data-title="Humildade e exaltação">
+        12 - Humildade e exaltação
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/13.MP3" data-title="Uma oração por humildade">
+        13 - Uma oração por humildade
+      </div>
     </div>
   </div>
 
@@ -219,8 +251,8 @@
       tracks.forEach(el => el.classList.remove('active'));
       const item = tracks[index];
       item.classList.add('active');
-      audioPlayer.src = item.dataset-src;
-      trackTitle.textContent = item.dataset-title;
+      audioPlayer.src = item.dataset.src;
+      trackTitle.textContent = item.dataset.title;
     }
 
     function playPause() {
@@ -230,17 +262,25 @@
 
     playBtn.addEventListener('click', playPause);
     prevBtn.addEventListener('click', () => {
-      currentIndex = (currentIndex - 1 + tracks.length) % tracks.length; loadTrack(currentIndex); audioPlayer.play();
+      currentIndex = (currentIndex - 1 + tracks.length) % tracks.length;
+      loadTrack(currentIndex);
+      audioPlayer.play();
     });
     nextBtn.addEventListener('click', () => {
-      currentIndex = (currentIndex + 1) % tracks.length; loadTrack(currentIndex); audioPlayer.play();
+      currentIndex = (currentIndex + 1) % tracks.length;
+      loadTrack(currentIndex);
+      audioPlayer.play();
     });
 
     audioPlayer.addEventListener('play', () => {
-      isPlaying = true; playIcon.style.display = 'none'; pauseIcon.style.display = 'inline';
+      isPlaying = true;
+      playIcon.style.display = 'none';
+      pauseIcon.style.display = 'inline';
     });
     audioPlayer.addEventListener('pause', () => {
-      isPlaying = false; playIcon.style.display = 'inline'; pauseIcon.style.display = 'none';
+      isPlaying = false;
+      playIcon.style.display = 'inline';
+      pauseIcon.style.display = 'none';
     });
 
     audioPlayer.addEventListener('loadedmetadata', () => {
@@ -253,7 +293,9 @@
       currentTimeDisplay.textContent = formatTime(audioPlayer.currentTime);
     });
     audioPlayer.addEventListener('ended', () => {
-      currentIndex = (currentIndex + 1) % tracks.length; loadTrack(currentIndex); audioPlayer.play();
+      currentIndex = (currentIndex + 1) % tracks.length;
+      loadTrack(currentIndex);
+      audioPlayer.play();
     });
 
     progressBar.addEventListener('click', e => {
@@ -264,7 +306,9 @@
 
     playlistItems.forEach((item, idx) => {
       item.addEventListener('click', () => {
-        currentIndex = idx; loadTrack(currentIndex); audioPlayer.play();
+        currentIndex = idx;
+        loadTrack(currentIndex);
+        audioPlayer.play();
       });
     });
   </script>
