--- a/index.html
+++ b/index.html
@@ -719,11 +719,12 @@
     });
 
     // Inicialização
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', () => {
-        navigator.serviceWorker.register('service-worker.js')
-          .catch(err => console.error('Falha no registro do Service Worker:', err));
-      });
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker
+      .register('/service-worker.js', { scope: '/' })
+      .then(() => console.log('Service Worker registrado com sucesso!'))
+      .catch(err => console.error('Erro ao registrar SW:', err));
+  }
     }
   </script>
 </body>
