--- a/index.html
+++ b/index.html
@@ -40,76 +40,45 @@
       position: relative;
     }
     .track-header {
-      display: flex;
-      flex-direction: column;
-      width: 100%;
-      margin-bottom: 15px;
-      text-align: center;
+      display: flex; flex-direction: column;
+      width: 100%; margin-bottom: 15px; text-align: center;
     }
     .track-title-container {
       position: relative;
     }
     .track-title {
       font-size: 20px; font-weight: bold;
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
+      white-space: nowrap; overflow: hidden; text-overflow: ellipsis;
       padding: 0 30px;
     }
     .album-title {
-      font-size: 14px;
-      color: #aaa;
-      margin-top: 5px;
+      font-size: 14px; color: #aaa; margin-top: 5px;
     }
     .menu-btn {
-      background: none;
-      border: none;
-      color: white;
-      font-size: 24px;
-      cursor: pointer;
-      padding: 5px;
-      position: absolute;
-      right: 0;
-      top: 0;
+      background: none; border: none; color: white;
+      font-size: 24px; cursor: pointer; padding: 5px;
+      position: absolute; right: 0; top: 0;
     }
     .menu {
-      position: absolute;
-      background: #222;
-      border-radius: 8px;
-      padding: 10px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
-      z-index: 100;
-      display: none;
-      right: 20px;
-      top: 60px;
+      position: absolute; background: #222; border-radius: 8px;
+      padding: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.5);
+      z-index: 100; display: none; right: 20px; top: 60px;
       max-width: 300px;
     }
     .menu-item {
-      padding: 8px 12px;
-      cursor: pointer;
-      border-radius: 4px;
-      display: flex;
-      align-items: center;
-      gap: 8px;
+      padding: 8px 12px; cursor: pointer; border-radius: 4px;
+      display: flex; align-items: center; gap: 8px;
     }
-    .menu-item:hover {
-      background: #444;
-    }
+    .menu-item:hover { background: #444; }
     .submenu {
-      display: none;
-      padding-left: 15px;
-      border-left: 1px solid #444;
-      margin-top: 5px;
+      display: none; padding-left: 15px;
+      border-left: 1px solid #444; margin-top: 5px;
     }
     .submenu-item {
-      padding: 6px 8px;
-      cursor: pointer;
-      display: flex;
-      align-items: center;
+      padding: 6px 8px; cursor: pointer;
+      display: flex; align-items: center;
     }
-    .submenu-item:hover {
-      background: #333;
-    }
+    .submenu-item:hover { background: #333; }
     .controls {
       display: flex; gap: 20px;
       align-items: center; justify-content: center;
@@ -117,8 +86,7 @@
     }
     .control-btn {
       background: none; border: none;
-      width: 60px; height: 60px;
-      cursor: pointer;
+      width: 60px; height: 60px; cursor: pointer;
       display: flex; align-items: center; justify-content: center;
       border-radius: 50%; outline: none;
       transition: box-shadow .2s, transform .2s;
@@ -128,8 +96,7 @@
       box-shadow: 0 0 15px rgba(255,255,255,0.8);
     }
     .control-btn .material-icons {
-      font-size: 30px;
-      color: #fff;
+      font-size: 30px; color: #fff;
     }
     .progress-speed {
       display: flex; align-items: center;
@@ -166,16 +133,131 @@
     }
     .playlist-item.active { background: #222; color: #fff; }
     .playlist-item:hover { background: #333; }
-    .share-dialog, .overlay {
-      display: none;
+
+    /* Estilos para compartilhamento */
+    .share-dialog {
+      display: none; position: fixed;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      background: #222; padding: 20px;
+      border-radius: 8px; box-shadow: 0 4px 20px rgba(0,0,0,0.5);
+      z-index: 1000; width: 90%; max-width: 400px;
     }
-    /* restante dos estilos de compartilhamento... */
+    .share-dialog h3 {
+      margin-top: 0; color: #fff;
+    }
+    .share-options {
+      display: flex; flex-wrap: wrap;
+      gap: 10px; margin: 15px 0;
+    }
+    .share-option {
+      display: flex; flex-direction: column;
+      align-items: center; cursor: pointer;
+      color: #fff; text-decoration: none;
+      font-size: 12px; width: 60px;
+    }
+    .share-icon {
+      width: 40px; height: 40px;
+      border-radius: 50%;
+      display: flex; align-items: center; justify-content: center;
+      margin-bottom: 5px; transition: transform 0.2s;
+    }
+    .share-icon:hover { transform: scale(1.1); }
+    .share-icon svg {
+      width: 24px; height: 24px; fill: white;
+    }
+    .whatsapp-icon { background-color: #25D366; }
+    .facebook-icon { background-color: #1877F2; }
+    .twitter-icon { background-color: #000000; }
+    .email-icon { background-color: #EA4335; }
+    .link-icon { background-color: #5f6368; }
+    .share-link {
+      width: 100%; padding: 8px; background: #333;
+      border: none; border-radius: 4px;
+      color: #fff; margin-top: 10px;
+    }
+    .close-share {
+      position: absolute; top: 10px; right: 10px;
+      background: none; border: none;
+      color: #aaa; font-size: 20px; cursor: pointer;
+    }
+    .overlay {
+      display: none; position: fixed;
+      top: 0; left: 0; right: 0; bottom: 0;
+      background: rgba(0,0,0,0.7); z-index: 999;
+    }
+
     @media (max-width: 400px) {
       .control-btn { width: 50px; height: 50px; }
       .control-btn .material-icons { font-size: 24px; }
       .track-title { font-size: 18px; }
     }
   </style>
+
+  <!-- Ícones SVG para compartilhamento -->
+  <svg style="display: none;">
+    <symbol id="whatsapp-icon" viewBox="0 0 24 24">
+      <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03
+      -.967-.273-.099-.471-.148-.67.15-.197.297-.767.966
+      -.94 1.164-.173.199-.347.223-.644.075-.297-.15
+      -1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653
+      -2.059-.173-.297-.018-.458.13-.606.134-.133.298
+      -.347.446-.52.149-.174.198-.298.298-.497.099-.198
+      .05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207
+      -.242-.579-.487-.5-.669-.51-.173-.008-.371-.01
+      -.57-.01-.198 0-.52.074-.792.372-.272.297-1.04
+      1.016-1.04 2.479 0 1.462 1.065 2.875 1.213
+      3.074.149.198 2.096 3.2 5.077 4.487.709.306
+      1.262.489 1.694.625.712.227 1.36.195 1.871.118
+      .571-.085 1.758-.719 2.006-1.413.248-.694.248
+      -1.289.173-1.413-.074-.124-.272-.198-.57
+      -.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031
+      -1.378l-.361-.214-3.741.982.998-3.648-.235
+      -.374a9.86 9.86 0 01-1.51-5.26c.001-5.45
+      4.436-9.884 9.888-9.884 2.64 0 5.122 1.03
+      6.988 2.898a9.825 9.825 0 012.893 6.994c
+      -.003 5.45-4.437 9.884-9.885 9.884m8.413
+      -18.297A11.815 11.815 0 0012.05 0C5.495 0
+      .16 5.335.157 11.892c0 2.096.547 4.142
+      1.588 5.945L.057 24l6.305-1.654a11.882
+      11.882 0 005.683 1.448h.005c6.554 0
+      11.89-5.335 11.893-11.893a11.821
+      11.821 0 00-3.48-8.413z"/>
+    </symbol>
+    <symbol id="twitter-icon" viewBox="0 0 24 24">
+      <path d="M18.244 2.25h3.308l-7.227 8.26
+      8.502 11.24H16.17l-5.214-6.817L4.99
+      21.75H1.68l7.73-8.835L1.254 2.25H8.08
+      l4.713 6.231zm-1.161 17.52h1.833L7.084
+      4.126H5.117z"/>
+    </symbol>
+    <symbol id="facebook-icon" viewBox="0 0 24 24">
+      <path d="M22.675 0H1.325C.593 0 0 .593 0
+      1.325v21.351C0 23.407.593 24 1.325 24H12.82
+      v-9.294H9.692v-3.622h3.128V8.413c0-3.1
+      1.893-4.788 4.659-4.788 1.325 0 2.463.099
+      2.795.143v3.24l-1.918.001c-1.504 0-1.795
+      .715-1.795 1.763v2.313h3.587l-.467
+      3.622h-3.12V24h6.116c.73 0 1.323-.593
+      1.323-1.325V1.325C24 .593 23.407 0
+      22.675 0z"/>
+    </symbol>
+    <symbol id="email-icon" viewBox="0 0 24 24">
+      <path d="M20 4H4c-1.1 0-1.99.9-1.99
+      2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9
+      2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6
+      l8 5 8-5v2z"/>
+    </symbol>
+    <symbol id="link-icon" viewBox="0 0 24 24">
+      <path d="M3.9 12c0-1.71 1.39-3.1
+      3.1-3.1h4V7H7c-2.76 0-5 2.24-5
+      5s2.24 5 5 5h4v-1.9H7c-1.71 0
+      -3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9
+      -6h-4v1.9h4c1.71 0 3.1 1.39 3.1
+      3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76
+      0 5-2.24 5-5s-2.24-5-5-5z"/>
+    </symbol>
+  </svg>
 </head>
 <body>
 
@@ -186,7 +268,6 @@
   </div>
 
   <div class="player">
-    <!-- cabeçalho da faixa -->
     <div class="track-header">
       <div class="track-title-container">
         <div class="track-title" id="track-title">Selecione um Capítulo</div>
@@ -216,7 +297,6 @@
       </div>
     </div>
 
-    <!-- controles principais -->
     <div class="controls">
       <button id="prev-btn" class="control-btn" title="Anterior">
         <span class="material-icons">skip_previous</span>
@@ -230,7 +310,6 @@
       </button>
     </div>
 
-    <!-- barra de progresso e velocidade -->
     <div class="progress-speed">
       <div class="progress-bar" id="progress-bar">
         <div class="progress" id="progress"></div>
@@ -245,7 +324,6 @@
       </div>
     </div>
 
-    <!-- tempo decorrido / total -->
     <div class="time-info">
       <span id="current-time">00:00</span>
       <span id="total-time">00:00</span>
@@ -253,30 +331,51 @@
 
     <audio id="audio-player" preload="metadata"></audio>
 
-    <!-- playlist -->
     <div class="playlist" id="playlist">
-      <!-- itens de exemplo; mantenha seus 13 capítulos -->
       <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/1.MP3" data-title="1. Humildade: A glória da criatura">
         1 - Humildade: A glória da criatura
-      </div> <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/2.MP3"  data-title="2. Humildade: O segredo da redenção">2 - Humildade: O segredo da redenção</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/3.MP3"  data-title="3. A Humildade de Jesus">3 - A Humildade de Jesus</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/4.MP3"  data-title="4. Humildade no ensinamento de Jesus">4 - Humildade no ensinamento de Jesus</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/5.MP3"  data-title="5. Humildade nos discípulos de Jesus">5 - Humildade nos discípulos de Jesus</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/6.MP3"  data-title="6. Humildade na vida cotidiana">6 - Humildade na vida cotidiana</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/7.MP3"  data-title="7. Humildade e santidade">7 - Humildade e santidade</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/8.MP3"  data-title="8. Humildade e pecado">8 - Humildade e pecado</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/9.MP3"  data-title="9. Humildade e fé">9 - Humildade e fé</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/10.MP3" data-title="10. Humildade e a morte de si próprio">10 - Humildade e a morte de si próprio</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/11.MP3" data-title="11. Humildade e felicidade">11 - Humildade e felicidade</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/12.MP3" data-title="12. Humildade e exaltação">12 - Humildade e exaltação</div>
-      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/13.MP3" data-title="13. Uma oração por humildade">13 - Uma oração por humildade</div>
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/2.MP3" data-title="2. Humildade: O segredo da redenção">
+        2 - Humildade: O segredo da redenção
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/3.MP3" data-title="3. A Humildade de Jesus">
+        3 - A Humildade de Jesus
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/4.MP3" data-title="4. Humildade no ensinamento de Jesus">
+        4 - Humildade no ensinamento de Jesus
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/5.MP3" data-title="5. Humildade nos discípulos de Jesus">
+        5 - Humildade nos discípulos de Jesus
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/6.MP3" data-title="6. Humildade na vida cotidiana">
+        6 - Humildade na vida cotidiana
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/7.MP3" data-title="7. Humildade e santidade">
+        7 - Humildade e santidade
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/8.MP3" data-title="8. Humildade e pecado">
+        8 - Humildade e pecado
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/9.MP3" data-title="9. Humildade e fé">
+        9 - Humildade e fé
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/10.MP3" data-title="10. Humildade e a morte de si próprio">
+        10 - Humildade e a morte de si próprio
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/11.MP3" data-title="11. Humildade e felicidade">
+        11 - Humildade e felicidade
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/12.MP3" data-title="12. Humildade e exaltação">
+        12 - Humildade e exaltação
+      </div>
+      <div class="playlist-item" data-src="https://archive.org/download/6_20250430_20250430/13.MP3" data-title="13. Uma oração por humildade">
+        13 - Uma oração por humildade
+      </div>
     </div>
   </div>
 
-  <!-- overlay e diálogo de compartilhamento -->
   <div class="overlay" id="share-overlay"></div>
   <div class="share-dialog" id="share-dialog">
-    <!-- conteúdo do diálogo -->
     <button class="close-share" id="close-share">&times;</button>
     <h3>Compartilhar Capítulo</h3>
     <div class="share-options" id="share-options"></div>
@@ -370,8 +469,7 @@
       audioPlayer.paused ? audioPlayer.play() : audioPlayer.pause();
     }
 
-    // Listeners
-
+    // Controles principais
     playBtn.addEventListener('click', playPause);
     prevBtn.addEventListener('click', () => { loadTrack((currentIndex-1+tracks.length)%tracks.length); audioPlayer.play(); });
     nextBtn.addEventListener('click', () => { loadTrack((currentIndex+1)%tracks.length); audioPlayer.play(); });
@@ -464,7 +562,6 @@
       shareDialog.style.display = 'block';
       shareOptions.innerHTML = '';
 
-      // Web Share API
       if (navigator.share) {
         const nativeShare = document.createElement('div');
         nativeShare.className = 'share-option';
