--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@ ${track.dataset.src}
 _Depois me conta o que achou!_ 🤗
 
 
-(*P.S.: Tem muitas outras pérolas esperando por você em*: https://arauto.com/apparauto)`;
+(*P.S.: Tem muitas outras pérolas esperando por você em*: https://encurtador.com.br/6La0s)`;
 
   shareLink.value = mensagemCompleta;
   shareOverlay.style.display = 'block';
@@ -826,7 +826,7 @@ indiqueBtn.addEventListener('click', (e) => {
     
 ${String.fromCodePoint(0x1F449)} Clique no link e descubra como! ${String.fromCodePoint(0x1F525)}
 
-https://arauto.com/membro-vitalicio`;
+https://encurtador.com.br/6La0s`;
 
   window.open(`https://wa.me/?text=${encodeURIComponent(texto)}`, '_blank');
 });
