--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@ ${track.dataset.src}
 _Depois me conta o que achou!_ 🤗
 
 
-(*P.S.: Tem muitas outras pérolas esperando por você em*: https://shre.ink/Arauto-vitalicio)`;
+(*P.S.: Tem muitas outras pérolas esperando por você em*: https://arautomais.github.io/Membro-vitalicio-ilimitado/)`;
 
   shareLink.value = mensagemCompleta;
   shareOverlay.style.display = 'block';
@@ -826,7 +826,7 @@ indiqueBtn.addEventListener('click', (e) => {
     
 ${String.fromCodePoint(0x1F449)} Clique no link e descubra como! ${String.fromCodePoint(0x1F525)}
 
-https://shre.ink/Arauto-vitalicio`;
+https://arautomais.github.io/Membro-vitalicio-ilimitado/`;
 
   window.open(`https://wa.me/?text=${encodeURIComponent(texto)}`, '_blank');
 });
